# ict-integration-hub

./: .env.example  .env.live-readonly.example  .env.local.example  .env.production.example  .env.test.example  .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 202607160001_initial_connector_tables.py  202607170001_uyumsoft_invoice_metadata.py  202607170002_uyumsoft_sync_runs.py  202607170003_invoice_documents.py  202607170004_odoo_draft_invoices.py
app/: main.py
app/api/: dependencies.py
app/billing/: __init__.py  builder.py  dto.py  exceptions.py  validation.py
app/connectors/: exceptions.py
app/core/: config.py  logging.py  runtime_checks.py
app/db/: session.py  types.py
app/domain/: __init__.py
app/erp/: __init__.py  exceptions.py  models.py  provider.py
app/matching/: __init__.py  exceptions.py  product.py  result.py
app/models/: __init__.py  connector_event.py  invoice_document.py  odoo_draft_invoice.py  provider.py  uyumsoft_invoice.py  uyumsoft_sync_run.py
docs/: ARCHITECTURE.md  BUILD_SPEC.md  INTEGRATION_FLOW.md  PRODUCTION_READINESS.md  PROJECT_CONSTITUTION.md  SPRINT-01.md  architecture.md  roadmap.md  vision.md
scripts/: diagnose_uyumsoft_auth.py  inspect_uyumsoft_wsdl.py  uyumsoft_invoice_download_readonly_smoke.py  uyumsoft_readonly_smoke.py  validate_odoo_staging.py  validate_uyumsoft_test.py
tests/: conftest.py
(+104 files in other folders)
