[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "ict-integration-hub"
version = "0.1.0"
description = "Read-only integration hub bootstrap for Odoo and Uyumsoft."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13",
  "fastapi>=0.111",
  "httpx>=0.27",
  "psycopg[binary]>=3.2",
  "pydantic-settings>=2.4",
  "sqlalchemy>=2.0",
  "uvicorn[standard]>=0.30",
  "zeep>=4.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.23",
  "ruff>=0.5",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
